--- a/README
+++ b/README
@@ -1,14 +1,14 @@
 **** LOOKING FOR THE ZIP FILE TO DOWNLOAD ? ***********************************
-If you're on already at https://github.com/Stoner19/neoscoinwallets
+If you're on already at https://github.com/Stoner19/hyperstakewallets
 Then just look for the button that says "Download ZIP". Look to your right --->
 *******************************************************************************
 
-neoscoinWallets.tk (originally forked from WalletGenerator.net)
+hyperstakeWallets.tk (originally forked from WalletGenerator.net)
 Universal Client-Side Wallet Generator
 
-Now neoscoin wallets addresses and their corresponding private key can be conveniently generated in a web browser.
+Now hyperstake wallets addresses and their corresponding private key can be conveniently generated in a web browser.
 
-The neoscoinWallets.tk  project provides an all-in-one HTML document with embedded JavaScript/Css/Images. The JavaScript is readable, not minified and contains no XMLHttpRequest's (no AJAX). The benefit of this technique is you can load the JavaScript locally and trust that the JavaScript did not change after being loaded. 
+The hyperstakeWallets.tk  project provides an all-in-one HTML document with embedded JavaScript/Css/Images. The JavaScript is readable, not minified and contains no XMLHttpRequest's (no AJAX). The benefit of this technique is you can load the JavaScript locally and trust that the JavaScript did not change after being loaded. 
 
 
 Please send DONATIONS for this project using the crypto-currency addresses available on the 'Donate' tab of the website.
